--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,41 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:0QFkE6DrBWrzK8mdnmWBz4siFO6GdB16zFjVNLUhh1U=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://book.localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql-database
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=mysql
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=mysql_root_password1
 
+
+# BROADCAST_DRIVER=redis
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_CLIENT=predis
+REDIS_HOST=redis
+REDIS_PASSWORD=secret
 REDIS_PORT=6379
+REDIS_PREFIX=""
+
+# BROADCAST_DRIVER=log
+# CACHE_DRIVER=file
+# QUEUE_CONNECTION=sync
+# SESSION_DRIVER=file
+# SESSION_LIFETIME=120
+
+# REDIS_HOST=127.0.0.1
+# REDIS_PASSWORD=null
+# REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
